syntax = "proto3";

package findMax;

message FindMaxRequest {
	int32 number = 1;
}

message FindMaxResponse {
    int32 max = 1;
    repeated int32 numbers = 2 [packed=true];
}

service FindMaxService {
    rpc FindMax (stream FindMaxRequest) returns (stream FindMaxResponse) {}
}